--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.9"
 dependencies = [
     "apscheduler>=3.11.0",
     "flask>=3.1.1",
+    "flask-compress>=1.17",
     "pillow>=11.2.1",
     "python-dotenv>=1.1.0",
     "requests>=2.32.3",
