--- a/compose.yml
+++ b/compose.yml
@@ -7,7 +7,8 @@ services:
       PYTHONUNBUFFERED: 1
       GDRIVE_FOLDER: ${GDRIVE_FOLDER}
       GAPI_KEY: ${GAPI_KEY}
-      TITLE: ${TITLE}
+      AUTHOR: ${AUTHOR}
+      BASE_URL: ${BASE_URL}
     volumes:
       - ./data:/app/data
       - ./thumbnails:/app/thumbnails
